tests/e2e/function_return_mutation_without_type.error
Error: syntax error in story at line 3, column None

3|      return my_int decrement
        ^^^^^^^^^^^^^^^^^^^^^^^

E0110: Function has no return output defined. Only `return` is allowed.
